--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: IV3JDV # Your GitHub username
-repo: HBLink Uptime # Your Github repository name
+owner: picchiosat # Your GitHub username
+repo: HBLink-Uptime # Your Github repository name
 
 # Add your sites here
 sites:
