--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,9 +25,9 @@ status-website:
   # Uncomment the following line if you don't have a custom domain and add your repo name
   # baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [Github repository](https://github.com/koj-co/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/koj-co/upptime)
+  name: Upptime HBLink
+  introTitle: HBLink ITALIA Network Status
+  introMessage: Statistiche in Real Time dei server di HBLink.it 
   navbar:
     - title: Status
       href: /
